Addressed IDE code improvement suggestions