@@ -15,7 +15,7 @@
  ******************************************************************************/
 package org.summerb.spring.security.auth;
 
-import java.util.Arrays;
+import java.io.Serial;
 import java.util.Collection;
 import java.util.List;
 import org.springframework.security.core.Authentication;
@@ -24,16 +24,16 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.summerb.spring.security.SecurityConstants;
 
 public class BackgroundProcessAuthentication implements Authentication {
-  private static final long serialVersionUID = 3710514197842955814L;
+  @Serial private static final long serialVersionUID = 3710514197842955814L;
 
   private String origin;
 
   private static List<? extends GrantedAuthority> AUTHORITIES =
-      Arrays.asList(new SimpleGrantedAuthority(SecurityConstants.ROLE_BACKGROUND_PROCESS));
+      List.of(new SimpleGrantedAuthority(SecurityConstants.ROLE_BACKGROUND_PROCESS));
   private boolean authenticated = true;
 
   /**
-   * @param origin some string which is probably suppose to clarify what is the origin of that
+   * @param origin some string which is probably supposed to clarify what is the origin of that
    *     authentication. Not used for any logic - just for tracing/debugging purposes
    */
   public BackgroundProcessAuthentication(String origin) {
@@ -72,6 +72,6 @@ public class BackgroundProcessAuthentication implements Authentication {
 
   @Override
   public void setAuthenticated(boolean isAuthenticated) throws IllegalArgumentException {
-    throw new IllegalStateException("Opearion is not supported");
+    throw new IllegalStateException("Operation is not supported");
   }
 }
